src/OpenCvSharp/Internal/PInvoke/NativeMethods/core/NativeMethods_core.cs


    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_normalize(in InputArrayProxy src, in InputOutputArrayProxy dst, double alpha, double beta,
        int normType, int dtype, in InputArrayProxy mask);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_reduceArgMax(in InputArrayProxy src, in OutputArrayProxy dst, int axis, [MarshalAs(UnmanagedType.U1)] bool lastIndex);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_reduceArgMin(in InputArrayProxy src, in OutputArrayProxy dst, int axis, [MarshalAs(UnmanagedType.U1)] bool lastIndex);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_minMaxLoc1(in InputArrayProxy src, out double minVal, out double maxVal);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_minMaxLoc2(in InputArrayProxy src, out double minVal, out double maxVal,
        out Point minLoc, out Point maxLoc, in InputArrayProxy mask);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_minMaxIdx1(in InputArrayProxy src, out double minVal, out double maxVal);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_minMaxIdx2(in InputArrayProxy src, out double minVal, out double maxVal,
        [MarshalAs(UnmanagedType.LPArray), Out] int[] minIdx, [MarshalAs(UnmanagedType.LPArray), Out] int[] maxIdx, in InputArrayProxy mask);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_reduce(in InputArrayProxy src, in OutputArrayProxy dst, int dim, int rtype, int dtype);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_merge(ReadOnlySpan<IntPtr> mv, uint count, IntPtr dst);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_split(IntPtr src, IntPtr mv);
        
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_mixChannels(ReadOnlySpan<IntPtr> src, uint nsrcs,
        ReadOnlySpan<IntPtr> dst, uint ndsts, int[] fromTo, uint npairs);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_extractChannel(in InputArrayProxy src, in OutputArrayProxy dst, int coi);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_insertChannel(in InputArrayProxy src, in InputOutputArrayProxy dst, int coi);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_flip(in InputArrayProxy src, in OutputArrayProxy dst, int flipCode);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_flipND(in InputArrayProxy src, in OutputArrayProxy dst, int axis);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_broadcast(in InputArrayProxy src, in InputArrayProxy shape, in OutputArrayProxy dst);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_rotate(in InputArrayProxy src, in OutputArrayProxy dst, int rotateCode);
        
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_repeat1(in InputArrayProxy src, int ny, int nx, in OutputArrayProxy dst);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_repeat2(IntPtr src, int ny, int nx, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_hconcat1(ReadOnlySpan<IntPtr> src, uint nsrc, in OutputArrayProxy dst);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_hconcat2(in InputArrayProxy src1, in InputArrayProxy src2, in OutputArrayProxy dst);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_vconcat1(ReadOnlySpan<IntPtr> src, uint nsrc, in OutputArrayProxy dst);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_vconcat2(in InputArrayProxy src1, in InputArrayProxy src2, in OutputArrayProxy dst);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_bitwise_and(in InputArrayProxy src1, in InputArrayProxy src2, in OutputArrayProxy dst, in InputArrayProxy mask);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_bitwise_or(in InputArrayProxy src1, in InputArrayProxy src2, in OutputArrayProxy dst, in InputArrayProxy mask);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_bitwise_xor(in InputArrayProxy src1, in InputArrayProxy src2, in OutputArrayProxy dst, in InputArrayProxy mask);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_bitwise_not(in InputArrayProxy src, in OutputArrayProxy dst, in InputArrayProxy mask);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_absdiff(in InputArrayProxy src1, in InputArrayProxy src2, in OutputArrayProxy dst);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_copyTo(in InputArrayProxy src, in OutputArrayProxy dst, in InputArrayProxy mask);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_inRange_InputArray(in InputArrayProxy src, in InputArrayProxy lowerb, in InputArrayProxy upperb, in OutputArrayProxy dst);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_inRange_Scalar(in InputArrayProxy src, Scalar lowerb, Scalar upperb, in OutputArrayProxy dst);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_compare(in InputArrayProxy src1, in InputArrayProxy src2, in OutputArrayProxy dst, int cmpop);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_min1(in InputArrayProxy src1, in InputArrayProxy src2, in OutputArrayProxy dst);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_min_MatMat(IntPtr src1, IntPtr src2, IntPtr dst);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_min_MatDouble(IntPtr src1, double src2, IntPtr dst);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_max1(in InputArrayProxy src1, in InputArrayProxy src2, in OutputArrayProxy dst);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_max_MatMat(IntPtr src1, IntPtr src2, IntPtr dst);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_max_MatDouble(IntPtr src1, double src2, IntPtr dst);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_sqrt(in InputArrayProxy src, in OutputArrayProxy dst);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_pow_Mat(in InputArrayProxy src, double power, in OutputArrayProxy dst);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_exp_Mat(in InputArrayProxy src, in OutputArrayProxy dst);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_log_Mat(in InputArrayProxy src, in OutputArrayProxy dst);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_polarToCart(in InputArrayProxy magnitude, in InputArrayProxy angle, in OutputArrayProxy x, in OutputArrayProxy y, int angleInDegrees);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_cartToPolar(in InputArrayProxy x, in InputArrayProxy y, in OutputArrayProxy magnitude, in OutputArrayProxy angle, int angleInDegrees);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_phase(in InputArrayProxy x, in InputArrayProxy y, in OutputArrayProxy angle, int angleInDegrees);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_magnitude_Mat(in InputArrayProxy x, in InputArrayProxy y, in OutputArrayProxy magnitude);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_checkRange(in InputArrayProxy a, int quiet, out Point pos, double minVal, double maxVal, out int returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_patchNaNs(in InputOutputArrayProxy a, double val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_finiteMask(in InputArrayProxy src, in OutputArrayProxy mask);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_gemm(in InputArrayProxy src1, in InputArrayProxy src2, double alpha, in InputArrayProxy src3, double gamma, in OutputArrayProxy dst, int flags);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus core_mulTransposed(in InputArrayProxy src, in OutputArrayProxy dst, int aTa, in InputArrayProxy delta, double scale, int dtype);
